crates/ide/src/snapshots/ide__verilog_2005__preproc_macro_hover_keeps_nested_actual_argument_macro_reference__actual_argument.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(payl_hover.info.as_str())
---
Macro `DEMO_NEXT`

```systemverilog
`DEMO_NEXT(value)
```


---

from [feature.v](<feature.v>) line 4

---

Expansion
```systemverilog
((payload_i) + 12'd1)
```


---

Macro `PAYL`

```systemverilog
`PAYL
```


---

from [feature.v](<feature.v>) line 2

---

Expansion
```systemverilog
payload_i
```
